--- a/requirements.txt
+++ b/requirements.txt
@@ -1,64 +1,6 @@
-aesara==2.6.5
-appnope==0.1.3
-arviz==0.8.3
-asttokens==2.0.5
-backcall==0.2.0
-cftime==1.6.0
-cons==0.4.5
-cycler==0.11.0
-debugpy==1.6.0
-decorator==5.1.1
-entrypoints==0.4
-etuples==0.3.5
-executing==0.8.3
-fastprogress==1.0.2
-filelock==3.6.0
-fonttools==4.33.3
-h5py==3.6.0
-ipykernel==6.13.0
-ipython==8.3.0
-jedi==0.18.1
-jupyter-client==7.3.0
-jupyter-core==4.10.0
-kiwisolver==1.4.2
-logical-unification==0.4.5
-matplotlib==3.5.2
-matplotlib-inline==0.1.3
-miniKanren==1.0.3
-multipledispatch==0.6.0
-nest-asyncio==1.5.5
-netCDF4==1.5.8
-numpy==1.19.0
-packaging==21.3
-pandas==1.4.2
-parso==0.8.3
-patsy==0.5.2
-pexpect==4.8.0
-pickleshare==0.7.5
-Pillow==9.1.0
-pip==22.0.3
-prompt-toolkit==3.0.29
-psutil==5.9.0
-ptyprocess==0.7.0
-pure-eval==0.2.2
-Pygments==2.12.0
-pymc3==3.9.1
-pyparsing==3.0.8
-python-dateutil==2.8.2
-pytz==2022.1
-pyzmq==22.3.0
-scipy==1.8.0
-seaborn==0.11.2
-setuptools==60.6.0
-setuptools-scm==6.4.2
-six==1.16.0
-stack-data==0.2.0
-Theano==1.0.5
-tomli==2.0.1
-toolz==0.11.2
-tornado==6.1
-traitlets==5.1.1
-typing_extensions==4.2.0
-wcwidth==0.2.5
-wheel==0.37.1
-xarray==2022.3.0
+pymc3"3.9.1"
+aesara=="^2.6.4"
+ipykernel=="^6.13.0"
+seaborn=="^0.11.2"
+arviz=="0.8.3"
+numpy=="1.19.0"
